# AwesomeC

./: .gitignore  README.md
CMake/: CMakeLists.txt
CMake/lib/01.CLanguageEnvLib/: CMakeLists.txt  cLanguageEnvLib.c  cLanguageEnvLib.h
CMake/lib/02.CTypeLib/: CMakeLists.txt  cTypeLib.c  cTypeLib.h
CMake/lib/03.StatementsLib/: CMakeLists.txt  statementsLib.c  statementsLib.h
CMake/lib/04.ArrLib/: CMakeLists.txt  arrLib.c  arrLib.h
CMake/lib/05.FunLib/: CMakeLists.txt  funLib.c  funLib.h
CMake/lib/06.PointerLib/: CMakeLists.txt  extend1.c  extend1.h  pointerLib.c  pointerLib.h
CMake/lib/07.MemoryLib/: CMakeLists.txt  memoryLib.c  memoryLib.h
CMake/lib/08.CompositeTypeLib/: CMakeLists.txt  compositeTypeLib.c  compositeTypeLib.h
CMake/lib/09.FileLib/: CMakeLists.txt  fileLib.c  fileLib.h
CMake/lib/dynamicLibrary/: CMakeLists.txt  dynamicLibrary.c  dynamicLibrary.h
CMake/lib/staticLibrary/: CMakeLists.txt  staticLibrary.c  staticLibrary.h
CMake/src/: main.c
cmake_deep_learning/: LICENSE  README.md
cmake_deep_learning-master/cmake_tutorial_part_02_cmakeLists_base_demo/lib/MathLib/: CMakeLists.txt
cmake_deep_learning-master/cmake_tutorial_part_02_cmakeLists_base_demo/lib/UtilsLib/: CMakeLists.txt  utilslib.h
cmake_deep_learning-master/cmake_tutorial_part_02_cmakeLists_base_demo/src/: CMakeLists.txt  main.cpp
cmake_deep_learning-master/cmake_tutorial_part_03_config_all_stages/: CMakeLists.txt
cmake_deep_learning-master/cmake_tutorial_part_03_config_all_stages/lib/MathLib/: CMakeLists.txt
cmake_deep_learning-master/cmake_tutorial_part_03_config_all_stages/lib/UtilsLib/: utilslib.cpp
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p01-statc_lib_demo/app/: CMakeLists.txt  app.vcxproj  app.vcxproj.filters
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p01-statc_lib_demo/lib/MathLib/: MathLib.vcxproj.filters  cmake_install.cmake
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p02-dyn_lib_demo/app/: CMakeLists.txt  main.cpp
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p02-dyn_lib_demo/lib/MathLib/: CMakeLists.txt
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/: CMakeLists.txt  Makefile
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/etc/: stuff_demo.conf
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/lib/: CMakeLists.txt
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/lib/libconfig/: CMakeLists.txt  CfgManager.cpp  CfgManager.h
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/lib/libmath/: CMakeLists.txt
cmake_deep_learning-master/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/opensource/lib/: CMakeLists.txt
cmake_deep_learning/cmake_tutorial_part_01_start_demo/: CMakeLists.txt  cmake_build.sh  demo_cpp_main.cpp
cmake_deep_learning/cmake_tutorial_part_02_cmakeLists_base_demo/: CMakeLists.txt
cmake_deep_learning/cmake_tutorial_part_02_cmakeLists_base_demo/lib/MathLib/: mathlib.h
cmake_deep_learning/cmake_tutorial_part_03_config_all_stages/src/: main.cpp
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p01-statc_lib_demo/: CMakeLists.txt  CMakeSettings.json
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p01-statc_lib_demo/app/: cmake_install.cmake
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p01-statc_lib_demo/lib/MathLib/: CMakeLists.txt  MathLib.vcxproj
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p02-dyn_lib_demo/: CMakeLists.txt
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p02-dyn_lib_demo/lib/MathLib/: mathlib.cpp
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/app/: CMakeLists.txt  main.cpp
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/lib/libmath/: MathLib.cpp
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/opensource/: CMakeLists.txt
cmake_deep_learning/cmake_tutorial_part_04_lib_mgt/p03-remote_install_lib_demo/opensource/lib/libconfuse/: CMakeLists.txt
rhin/: rhin.sln
rhin/dynamicLibrary/: dynamicLibrary.sln
rhin/dynamicLibrary/dynamicLibrary/: dllmain.c  dynamicLibrary.c  dynamicLibrary.h  dynamicLibrary.vcxproj  dynamicLibrary.vcxproj.filters
rhin/rhin/: rhin.c  rhin.vcxproj  rhin.vcxproj.filters
rhin/rhin/x64/Debug/: rhin.exe.recipe  rhin.ilk  vc143.idb
rhin/rhin/x64/Debug/rhin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rhin.lastbuildstate
rhin/rhin/x64/Release/: rhin.exe.recipe  rhin.iobj  rhin.ipdb
rhin/rhin/x64/Release/rhin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rhin.lastbuildstate
rhin/staticLibrary/: staticLibrary.sln
rhin/staticLibrary/staticLibrary/: staticLibrary.c  staticLibrary.h  staticLibrary.vcxproj  staticLibrary.vcxproj.filters
